# npu-coding-mcp

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: cce_index.db  ptoisacommit.txt  runtime_index.db
data/ascendc_docs/: 00-index.md
data/cce_docs/: 00-index.md
data/cce_docs/01_简介/: 01_简介.md
data/cce_docs/02_异构编程环境配置与编译器使用/: 02_异构编程环境配置与编译器使用.md
data/cce_docs/03_CCEIntrinsic介绍/: 03_CCEIntrinsic介绍.md
data/cce_docs/04_CCEIntrinsic特性/: 04_CCEIntrinsic特性.md
data/cce_docs/05_CCEIntrinsic样例/: 05_CCEIntrinsic样例.md
data/cce_docs/06_API参考/: 06_01_简介.md  06_02_典型语义.md  06_03_向量计算接口.md  06_04_矩阵计算接口.md  06_05_数据搬运接口.md  06_06_同步接口.md
data/runtime_docs/: 00-index.md
data/runtime_docs/01_Runtime_API_C/: 01_01_废弃接口_&_返回码列表.md  01_02_同步_&_异步_API_说明.md  01_03_头文件和库文件说明.md  01_04_初始化和去初始化.md  01_05_运行时配置.md  01_06_Device_管理.md  01_07_Context_管理.md  01_08_Stream_管理.md  01_09_Event_管理.md  01_10_Notify_管理.md  01_11_CntNotify_管理.md  01_13_内存管理.md  (+16 more)
plan/: TODO.md
scripts/: build_cce_mapping.py  split_cce_docs.py  split_runtime_docs.py
src/npu_coding_mcp/: __init__.py  __main__.py  compile.py  kernel.py  loader.py  prompts.py  repo_manager.py  resources.py  server.py  tools.py
tests/: AGENTS.md  README.md  pyproject.toml  test_cce_extractor.py  test_loader.py  test_pto_isa_compile.py  test_server.py
tests/data/: cce_mapping.json
tests/resources/: test_pto_isa_api.py  test_resources_host.py
tests/tools/: test_compile_extract_function_signature.py  test_pto_isa_compile.py  test_tool_compile_pto_isa_cpp.py
(+2883 files in other folders)
