[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npu-coding-mcp"
version = "0.1.0"
description = "MCP server for Ascend NPU kernel development"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
npu-coding-mcp = "npu_coding_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/npu_coding_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
