[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npu-coding-mcp"
version = "0.1.0"
description = "MCP server exposing PTO-ISA instruction documentation and CANN AscendC operator development guide for NPU coding agents."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
npu-coding-mcp = "npu_coding_mcp.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/npu_coding_mcp"]
